--- a/playGameStyle.css
+++ b/playGameStyle.css
@@ -33,26 +33,26 @@ h1{
     transform: rotate(0deg);
     transition: 0.4s;
     border-radius: 50%;
-    border: 5px solid rgb(128, 255, 0);;
+    border: 5px solid rgb(153, 219, 144);;
 }
 #rock{
     position: absolute;
-    top: 37vh;
+    top: 42vh;
     left:25vw;
 }
 #paper{
     position: absolute;
-    top: 37vh;
+    top: 42vh;
     left:44vw;
 }
 #scissors{
     position: absolute;
-    top: 37vh;
+    top: 42vh;
     left:63vw;
 }
 #rock:hover, #paper:hover, #scissors:hover{
     position: absolute;
-    top: 30vh;
+    top: 35vh;
 }
 h2{
     color:rgb(128, 255, 0);
@@ -66,7 +66,7 @@ h2{
 #nameScore{
     position: absolute;
     color:rgb(255, 255, 255);
-    top: 78vh; 
+    top: 82vh; 
     left: 42vw; 
     font-size: 3em; 
     font-family: indie; 
@@ -95,4 +95,39 @@ h2{
 #compLogo{
     width: 10vw;
     padding: 5px;
+}
+footer{
+    color:aliceblue;
+    position: absolute;
+    top: 95vh;
+    left: 5vw;
+    font-family: 'Courier New', Courier, monospace;
+}
+#odinLink{
+    text-decoration: none;
+    color: rgb(202, 199, 13);
+    position: fixed;
+    top: 95vh;
+    left: 15vw;
+}
+#githubLink{
+    position: fixed;
+    top: 95vh;
+    left: 80vw;
+    text-decoration: none;
+    color: aliceblue;
+}
+#githubLink img{
+    position: fixed;
+    top: 92vh;
+    left: 90vw;
+}
+#retry{
+    position: fixed;
+    top: 49vh;
+    left:45vw;
+    font-family: licorice;
+    color:rgb(94, 86, 14);
+    font-size: 42px;
+    cursor: pointer;
 }
